@@ -1,7 +1,7 @@
 package bio.terra.app.controller.converters;
 
-import bio.terra.app.controller.exception.ValidationException;
-import java.util.Collections;
+import bio.terra.common.exception.ValidationException;
+import java.util.List;
 import org.springframework.core.convert.converter.Converter;
 
 /**
@@ -23,7 +23,9 @@ public abstract class OpenApiEnumConverter<T> implements Converter<String, T> {
    */
   abstract T fromValue(String source);
 
-  /** @return A specific error string for the type T. */
+  /**
+   * @return A specific error string for the type T.
+   */
   abstract String errorString();
 
   @Override
@@ -31,8 +33,7 @@ public abstract class OpenApiEnumConverter<T> implements Converter<String, T> {
     T result = fromValue(source.toLowerCase());
     if (result == null) {
       throw new ValidationException(
-          String.format("Invalid enum parameter: '%s'.", source),
-          Collections.singletonList(errorString()));
+          String.format("Invalid enum parameter: %s.", source), List.of(errorString()));
     }
     return result;
   }
