@@ -2,11 +2,12 @@ package bio.terra.service.dataset.flight.ingest;
 
 import static bio.terra.service.resourcemanagement.azure.AzureStorageAccountResource.*;
 
+import bio.terra.common.iam.AuthenticatedUserRequest;
 import bio.terra.model.BillingProfileModel;
 import bio.terra.model.IngestRequestModel;
+import bio.terra.service.common.CommonMapKeys;
 import bio.terra.service.filedata.azure.AzureSynapsePdao;
 import bio.terra.service.filedata.azure.blobstore.AzureBlobStorePdao;
-import bio.terra.service.filedata.flight.FileMapKeys;
 import bio.terra.service.profile.flight.ProfileMapKeys;
 import bio.terra.service.resourcemanagement.azure.AzureStorageAccountResource;
 import bio.terra.stairway.FlightContext;
@@ -16,16 +17,20 @@ import bio.terra.stairway.StepResult;
 import bio.terra.stairway.StepStatus;
 import com.azure.storage.blob.BlobUrlParts;
 import java.sql.SQLException;
-import java.util.Arrays;
+import java.util.List;
 
 public class IngestCreateIngestRequestDataSourceStep implements Step {
-  private AzureSynapsePdao azureSynapsePdao;
-  private AzureBlobStorePdao azureBlobStorePdao;
+  private final AzureSynapsePdao azureSynapsePdao;
+  private final AzureBlobStorePdao azureBlobStorePdao;
+  private final AuthenticatedUserRequest userRequest;
 
   public IngestCreateIngestRequestDataSourceStep(
-      AzureSynapsePdao azureSynapsePdao, AzureBlobStorePdao azureBlobStorePdao) {
+      AzureSynapsePdao azureSynapsePdao,
+      AzureBlobStorePdao azureBlobStorePdao,
+      AuthenticatedUserRequest userRequest) {
     this.azureSynapsePdao = azureSynapsePdao;
     this.azureBlobStorePdao = azureBlobStorePdao;
+    this.userRequest = userRequest;
   }
 
   @Override
@@ -36,23 +41,22 @@ public class IngestCreateIngestRequestDataSourceStep implements Step {
         workingMap.get(ProfileMapKeys.PROFILE_MODEL, BillingProfileModel.class);
 
     final BlobUrlParts signedBlobUrlParts;
-    final ContainerType containerType;
-    if (IngestUtils.noFilesToIngest.test(context)) {
-      signedBlobUrlParts =
-          azureBlobStorePdao.getOrSignUrlForSourceFactory(
-              ingestRequestModel.getPath(), billingProfileModel.getTenantId());
-
-    } else {
-      String path = workingMap.get(IngestMapKeys.INGEST_SCRATCH_FILE_PATH, String.class);
+    if (IngestUtils.isCombinedFileIngest(context)) {
+      String path = workingMap.get(IngestMapKeys.INGEST_CONTROL_FILE_PATH, String.class);
       AzureStorageAccountResource storageAccount =
-          workingMap.get(FileMapKeys.STORAGE_ACCOUNT_INFO, AzureStorageAccountResource.class);
+          workingMap.get(
+              CommonMapKeys.DATASET_STORAGE_ACCOUNT_RESOURCE, AzureStorageAccountResource.class);
       signedBlobUrlParts =
           azureBlobStorePdao.getOrSignUrlForTargetFactory(
-              path, billingProfileModel, storageAccount, ContainerType.SCRATCH);
+              path, billingProfileModel, storageAccount, userRequest);
+    } else {
+      signedBlobUrlParts =
+          azureBlobStorePdao.getOrSignUrlForSourceFactory(
+              ingestRequestModel.getPath(), billingProfileModel.getTenantId(), userRequest);
     }
 
     try {
-      azureSynapsePdao.createExternalDataSource(
+      azureSynapsePdao.getOrCreateExternalDataSource(
           signedBlobUrlParts,
           IngestUtils.getIngestRequestScopedCredentialName(context.getFlightId()),
           IngestUtils.getIngestRequestDataSourceName(context.getFlightId()));
@@ -66,9 +70,9 @@ public class IngestCreateIngestRequestDataSourceStep implements Step {
   @Override
   public StepResult undoStep(FlightContext context) {
     azureSynapsePdao.dropDataSources(
-        Arrays.asList(IngestUtils.getIngestRequestDataSourceName(context.getFlightId())));
+        List.of(IngestUtils.getIngestRequestDataSourceName(context.getFlightId())));
     azureSynapsePdao.dropScopedCredentials(
-        Arrays.asList(IngestUtils.getIngestRequestScopedCredentialName(context.getFlightId())));
+        List.of(IngestUtils.getIngestRequestScopedCredentialName(context.getFlightId())));
 
     return StepResult.getStepResultSuccess();
   }
