@@ -8,14 +8,14 @@ import bio.terra.service.dataset.DatasetService;
 import bio.terra.service.dataset.DatasetTable;
 import bio.terra.service.filedata.azure.AzureSynapsePdao;
 import bio.terra.service.job.JobMapKeys;
+import bio.terra.service.resourcemanagement.azure.AzureStorageAccountResource.FolderType;
 import bio.terra.stairway.FlightContext;
 import bio.terra.stairway.FlightMap;
 import bio.terra.stairway.Step;
 import bio.terra.stairway.StepResult;
 import bio.terra.stairway.StepStatus;
-import com.azure.storage.blob.BlobUrlParts;
 import java.sql.SQLException;
-import java.util.Arrays;
+import java.util.List;
 
 public class IngestCreateParquetFilesStep implements Step {
 
@@ -30,33 +30,23 @@ public class IngestCreateParquetFilesStep implements Step {
 
   @Override
   public StepResult doStep(FlightContext context) throws InterruptedException {
-    IngestRequestModel ingestRequestModel = IngestUtils.getIngestRequestModel(context);
     FlightMap workingMap = context.getWorkingMap();
     Dataset dataset = IngestUtils.getDataset(context, datasetService);
-    DatasetTable targetTable = IngestUtils.getDatasetTable(context, dataset);
-    String parquetFilePath = workingMap.get(IngestMapKeys.PARQUET_FILE_PATH, String.class);
-    final BlobUrlParts ingestBlob;
-    if (IngestUtils.noFilesToIngest.test(context)) {
-      ingestBlob = BlobUrlParts.parse(ingestRequestModel.getPath());
-    } else {
-      ingestBlob =
-          BlobUrlParts.parse(workingMap.get(IngestMapKeys.INGEST_SCRATCH_FILE_PATH, String.class));
-    }
+    String parquetFilePath =
+        FolderType.METADATA.getPath(workingMap.get(IngestMapKeys.PARQUET_FILE_PATH, String.class));
+    DatasetTable datasetTable = IngestUtils.getDatasetTable(context, dataset);
+
+    int failedRowCount = workingMap.get(IngestMapKeys.AZURE_ROWS_FAILED_VALIDATION, Integer.class);
 
     long updateCount;
     try {
       updateCount =
-          azureSynapsePdao.createParquetFiles(
-              ingestRequestModel.getFormat(),
-              targetTable,
-              ingestBlob.getBlobName(),
+          azureSynapsePdao.createFinalParquetFiles(
+              IngestUtils.getSynapseIngestTableName(context.getFlightId()),
               parquetFilePath,
               IngestUtils.getTargetDataSourceName(context.getFlightId()),
-              IngestUtils.getIngestRequestDataSourceName(context.getFlightId()),
-              IngestUtils.getSynapseTableName(context.getFlightId()),
-              ingestRequestModel.getCsvSkipLeadingRows(),
-              ingestRequestModel.getCsvFieldDelimiter(),
-              ingestRequestModel.getCsvQuote());
+              IngestUtils.getSynapseScratchTableName(context.getFlightId()),
+              datasetTable);
 
     } catch (SQLException ex) {
       return new StepResult(StepStatus.STEP_RESULT_FAILURE_FATAL, ex);
@@ -64,9 +54,9 @@ public class IngestCreateParquetFilesStep implements Step {
 
     IngestRequestModel ingestRequest = IngestUtils.getIngestRequestModel(context);
 
-    Long failedRowCount = 0L;
+    Long failedCombinedRowCount = 0L;
     if (workingMap.containsKey(IngestMapKeys.COMBINED_FAILED_ROW_COUNT)) {
-      failedRowCount = workingMap.get(IngestMapKeys.COMBINED_FAILED_ROW_COUNT, Long.class);
+      failedCombinedRowCount = workingMap.get(IngestMapKeys.COMBINED_FAILED_ROW_COUNT, Long.class);
     }
 
     IngestResponseModel ingestResponse =
@@ -76,13 +66,18 @@ public class IngestCreateParquetFilesStep implements Step {
             .table(ingestRequest.getTable())
             .path(ingestRequest.getPath())
             .loadTag(ingestRequest.getLoadTag())
-            .badRowCount(failedRowCount) // Azure only has failed rows if combined ingest does.
+            .badRowCount(failedCombinedRowCount + failedRowCount)
             .rowCount(updateCount);
 
-    if (!IngestUtils.noFilesToIngest.test(context)) {
+    if (IngestUtils.isCombinedFileIngest(context)) {
       BulkLoadArrayResultModel fileLoadResults =
           workingMap.get(IngestMapKeys.BULK_LOAD_RESULT, BulkLoadArrayResultModel.class);
       ingestResponse.loadResult(fileLoadResults);
+    }
+
+    // If loading from a payload, there is no path to report to the user
+    if (IngestUtils.isIngestFromPayload(context.getInputParameters())) {
+      ingestResponse.setPath(null);
     }
 
     context.getWorkingMap().put(JobMapKeys.RESPONSE.getKeyName(), ingestResponse);
@@ -93,7 +88,7 @@ public class IngestCreateParquetFilesStep implements Step {
   @Override
   public StepResult undoStep(FlightContext context) {
     azureSynapsePdao.dropTables(
-        Arrays.asList(IngestUtils.getIngestRequestDataSourceName(context.getFlightId())));
+        List.of(IngestUtils.getSynapseIngestTableName(context.getFlightId())));
     return StepResult.getStepResultSuccess();
   }
 }
