@@ -2,10 +2,11 @@ package bio.terra.service.dataset.flight.ingest;
 
 import static bio.terra.service.resourcemanagement.azure.AzureStorageAccountResource.*;
 
+import bio.terra.common.iam.AuthenticatedUserRequest;
 import bio.terra.model.BillingProfileModel;
+import bio.terra.service.common.CommonMapKeys;
 import bio.terra.service.filedata.azure.AzureSynapsePdao;
 import bio.terra.service.filedata.azure.blobstore.AzureBlobStorePdao;
-import bio.terra.service.filedata.flight.FileMapKeys;
 import bio.terra.service.profile.flight.ProfileMapKeys;
 import bio.terra.service.resourcemanagement.azure.AzureStorageAccountResource;
 import bio.terra.stairway.FlightContext;
@@ -15,16 +16,20 @@ import bio.terra.stairway.StepResult;
 import bio.terra.stairway.StepStatus;
 import com.azure.storage.blob.BlobUrlParts;
 import java.sql.SQLException;
-import java.util.Arrays;
+import java.util.List;
 
 public class IngestCreateTargetDataSourceStep implements Step {
-  private AzureSynapsePdao azureSynapsePdao;
-  private AzureBlobStorePdao azureBlobStorePdao;
+  private final AzureSynapsePdao azureSynapsePdao;
+  private final AzureBlobStorePdao azureBlobStorePdao;
+  private final AuthenticatedUserRequest userRequest;
 
   public IngestCreateTargetDataSourceStep(
-      AzureSynapsePdao azureSynapsePdao, AzureBlobStorePdao azureBlobStorePdao) {
+      AzureSynapsePdao azureSynapsePdao,
+      AzureBlobStorePdao azureBlobStorePdao,
+      AuthenticatedUserRequest userRequest) {
     this.azureSynapsePdao = azureSynapsePdao;
     this.azureBlobStorePdao = azureBlobStorePdao;
+    this.userRequest = userRequest;
   }
 
   @Override
@@ -35,20 +40,17 @@ public class IngestCreateTargetDataSourceStep implements Step {
         workingMap.get(ProfileMapKeys.PROFILE_MODEL, BillingProfileModel.class);
 
     AzureStorageAccountResource storageAccountResource =
-        workingMap.get(FileMapKeys.STORAGE_ACCOUNT_INFO, AzureStorageAccountResource.class);
+        workingMap.get(
+            CommonMapKeys.DATASET_STORAGE_ACCOUNT_RESOURCE, AzureStorageAccountResource.class);
 
-    String parquetDestinationLocation =
-        IngestUtils.getParquetTargetLocationURL(storageAccountResource);
+    String parquetDestinationLocation = storageAccountResource.getStorageAccountUrl();
     BlobUrlParts targetSignUrlBlob =
         azureBlobStorePdao.getOrSignUrlForTargetFactory(
-            parquetDestinationLocation,
-            billingProfile,
-            storageAccountResource,
-            ContainerType.METADATA);
+            parquetDestinationLocation, billingProfile, storageAccountResource, userRequest);
     try {
-      azureSynapsePdao.createExternalDataSource(
+      azureSynapsePdao.getOrCreateExternalDataSource(
           targetSignUrlBlob,
-          IngestUtils.getTargetScopedCredentialName(flightId),
+          IngestUtils.getScopedCredentialName(flightId),
           IngestUtils.getTargetDataSourceName(flightId));
     } catch (SQLException ex) {
       return new StepResult(StepStatus.STEP_RESULT_FAILURE_FATAL, ex);
@@ -59,8 +61,10 @@ public class IngestCreateTargetDataSourceStep implements Step {
 
   @Override
   public StepResult undoStep(FlightContext context) {
-    azureSynapsePdao.dropTables(
-        Arrays.asList(IngestUtils.getSynapseTableName(context.getFlightId())));
+    azureSynapsePdao.dropDataSources(
+        List.of(IngestUtils.getTargetDataSourceName(context.getFlightId())));
+    azureSynapsePdao.dropScopedCredentials(
+        List.of(IngestUtils.getScopedCredentialName(context.getFlightId())));
 
     return StepResult.getStepResultSuccess();
   }
