@@ -1,50 +1,79 @@
 package bio.terra.service.filedata.azure.blobstore;
 
 import static bio.terra.service.filedata.DrsService.getLastNameFromPath;
+import static bio.terra.service.filedata.google.gcs.GcsConstants.USER_PROJECT_QUERY_PARAM;
+import static bio.terra.service.filedata.google.gcs.GcsPdao.getProjectIdFromGsPath;
 
+import bio.terra.common.UriUtils;
 import bio.terra.common.exception.PdaoException;
+import bio.terra.common.iam.AuthenticatedUserRequest;
 import bio.terra.model.BillingProfileModel;
 import bio.terra.model.FileLoadModel;
+import bio.terra.service.common.azure.AzureUriUtils;
+import bio.terra.service.common.gcs.GcsUriUtils;
+import bio.terra.service.dataset.Dataset;
 import bio.terra.service.filedata.CloudFileReader;
 import bio.terra.service.filedata.FSFileInfo;
+import bio.terra.service.filedata.FSItem;
+import bio.terra.service.filedata.FileIdService;
+import bio.terra.service.filedata.FileMetadataUtils;
+import bio.terra.service.filedata.FileMetadataUtils.Md5ValidationResult;
 import bio.terra.service.filedata.azure.util.AzureBlobStoreBufferedReader;
 import bio.terra.service.filedata.azure.util.AzureBlobStoreBufferedWriter;
 import bio.terra.service.filedata.azure.util.BlobContainerClientFactory;
+import bio.terra.service.filedata.azure.util.BlobContainerCopier;
+import bio.terra.service.filedata.azure.util.BlobContainerCopyInfo;
 import bio.terra.service.filedata.azure.util.BlobCrl;
 import bio.terra.service.filedata.azure.util.BlobSasTokenOptions;
 import bio.terra.service.filedata.google.firestore.FireStoreFile;
+import bio.terra.service.filedata.google.gcs.GcsPdao;
+import bio.terra.service.filedata.google.gcs.GcsProjectFactory;
 import bio.terra.service.profile.ProfileDao;
 import bio.terra.service.resourcemanagement.azure.AzureAuthService;
 import bio.terra.service.resourcemanagement.azure.AzureContainerPdao;
 import bio.terra.service.resourcemanagement.azure.AzureResourceConfiguration;
 import bio.terra.service.resourcemanagement.azure.AzureResourceDao;
 import bio.terra.service.resourcemanagement.azure.AzureStorageAccountResource;
-import bio.terra.service.resourcemanagement.azure.AzureStorageAccountResource.ContainerType;
+import bio.terra.service.resourcemanagement.azure.AzureStorageAccountResource.FolderType;
 import bio.terra.service.resourcemanagement.exception.AzureResourceException;
 import com.azure.core.credential.TokenCredential;
+import com.azure.core.util.polling.LongRunningOperationStatus;
+import com.azure.core.util.polling.PollResponse;
 import com.azure.storage.blob.BlobUrlParts;
+import com.azure.storage.blob.models.BlobItem;
 import com.azure.storage.blob.models.BlobProperties;
+import com.azure.storage.blob.models.ListBlobsOptions;
 import com.azure.storage.blob.sas.BlobSasPermission;
 import com.azure.storage.common.policy.RequestRetryOptions;
 import com.azure.storage.common.policy.RetryPolicyType;
+import com.google.cloud.storage.Blob;
+import com.google.cloud.storage.Storage;
 import com.google.common.annotations.VisibleForTesting;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Paths;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.Base64;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Stream;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.codec.binary.Hex;
+import org.apache.commons.lang3.StringUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 @Component
 public class AzureBlobStorePdao implements CloudFileReader {
 
-  private static final Duration DEFAULT_SAS_TOKEN_EXPIRATION = Duration.ofHours(24);
+  private static final Logger logger = LoggerFactory.getLogger(AzureBlobStorePdao.class);
+
+  public static final Duration DEFAULT_SAS_TOKEN_EXPIRATION = Duration.ofHours(24);
 
   private static final int LOG_RETENTION_DAYS = 90;
 
@@ -56,6 +85,9 @@ public class AzureBlobStorePdao implements CloudFileReader {
   private final AzureResourceConfiguration resourceConfiguration;
   private final AzureResourceDao azureResourceDao;
   private final AzureAuthService azureAuthService;
+  private final FileIdService fileIdService;
+  private final GcsProjectFactory gcsProjectFactory;
+  private final GcsPdao gcsPdao;
 
   @Autowired
   public AzureBlobStorePdao(
@@ -63,60 +95,161 @@ public class AzureBlobStorePdao implements CloudFileReader {
       AzureContainerPdao azureContainerPdao,
       AzureResourceConfiguration resourceConfiguration,
       AzureResourceDao azureResourceDao,
-      AzureAuthService azureAuthService) {
+      AzureAuthService azureAuthService,
+      FileIdService fileIdService,
+      GcsProjectFactory gcsProjectFactory,
+      GcsPdao gcsPdao) {
     this.profileDao = profileDao;
     this.azureContainerPdao = azureContainerPdao;
     this.resourceConfiguration = resourceConfiguration;
     this.azureResourceDao = azureResourceDao;
     this.azureAuthService = azureAuthService;
+    this.fileIdService = fileIdService;
+    this.gcsProjectFactory = gcsProjectFactory;
+    this.gcsPdao = gcsPdao;
   }
 
   private RequestRetryOptions getRetryOptions() {
     return new RequestRetryOptions(
         RetryPolicyType.EXPONENTIAL,
-        this.resourceConfiguration.getMaxRetries(),
-        this.resourceConfiguration.getRetryTimeoutSeconds(),
+        this.resourceConfiguration.maxRetries(),
+        this.resourceConfiguration.retryTimeoutSeconds(),
         null,
         null,
         null);
   }
 
   public FSFileInfo copyFile(
+      Dataset dataset,
       BillingProfileModel profileModel,
       FileLoadModel fileLoadModel,
       String fileId,
-      AzureStorageAccountResource storageAccountResource) {
+      AzureStorageAccountResource storageAccountResource,
+      AuthenticatedUserRequest userRequest) {
 
+    SourceFileInfo sourceFileInfo =
+        getSourceFileInfo(profileModel.getTenantId(), fileLoadModel.getSourcePath());
     BlobContainerClientFactory targetClientFactory =
-        getTargetDataClientFactory(profileModel, storageAccountResource, ContainerType.DATA, false);
-
-    BlobContainerClientFactory sourceClientFactory =
-        buildSourceClientFactory(profileModel.getTenantId(), fileLoadModel.getSourcePath());
+        getTargetDataClientFactory(
+            profileModel,
+            storageAccountResource,
+            new BlobSasTokenOptions(
+                DEFAULT_SAS_TOKEN_EXPIRATION,
+                new BlobSasPermission()
+                    .setReadPermission(true)
+                    .setListPermission(true)
+                    .setWritePermission(true),
+                userRequest.getEmail()));
 
     BlobCrl blobCrl = getBlobCrl(targetClientFactory);
 
     // Read the leaf node of the source file to use as a way to name the file we store
-    BlobUrlParts blobUrl = BlobUrlParts.parse(fileLoadModel.getSourcePath());
-    String fileName = getLastNameFromPath(blobUrl.getBlobName());
+    String fileName = getLastNameFromPath(UriUtils.toUri(fileLoadModel.getSourcePath()).getPath());
 
-    String blobName = getBlobName(fileId, fileName);
-    blobCrl
-        .createBlobContainerCopier(sourceClientFactory, blobUrl.getBlobName(), blobName)
-        .beginCopyOperation()
-        .waitForCompletion();
+    Md5ValidationResult finalMd5 =
+        FileMetadataUtils.validateFileMd5ForIngest(
+            fileLoadModel.getMd5(), sourceFileInfo.md5(), fileLoadModel.getSourcePath());
+
+    String effectiveFileId;
+    if (fileId == null) {
+      effectiveFileId =
+          fileIdService
+              .calculateFileId(
+                  dataset,
+                  new FSItem()
+                      .path(fileLoadModel.getTargetPath())
+                      .checksumMd5(finalMd5.effectiveMd5())
+                      .size(sourceFileInfo.size()))
+              .toString();
+    } else {
+      effectiveFileId = fileId;
+    }
+
+    String blobName = getBlobName(effectiveFileId, fileName);
+    BlobContainerCopier blobContainerCopier;
+    if (sourceFileInfo.sourceClientFactory() != null) {
+      blobContainerCopier =
+          blobCrl.createBlobContainerCopier(
+              sourceFileInfo.sourceClientFactory(), sourceFileInfo.sourceUrl(), blobName);
+    } else {
+      // In the case sourceClientFactory is null, this indicates that we are loading from a gs URI
+      blobContainerCopier =
+          blobCrl.createBlobContainerCopier(UriUtils.toUri(sourceFileInfo.sourceUrl()), blobName);
+    }
+    Instant startTime = Instant.now();
+    logger.info("Starting copy operation for {}", blobName);
+    PollResponse<BlobContainerCopyInfo> copyResponse =
+        blobContainerCopier.beginCopyOperation().waitForCompletion();
+    logger.info(
+        "Finished copy operation for {} with status {} in {} seconds",
+        blobName,
+        copyResponse.getStatus(),
+        Duration.between(startTime, Instant.now()).getSeconds());
+
+    if (!copyResponse.getStatus().equals(LongRunningOperationStatus.SUCCESSFULLY_COMPLETED)) {
+      throw new PdaoException(
+          "Blob %s was not successfully copied with status: %s"
+              .formatted(blobName, copyResponse.getStatus()));
+    }
 
     BlobProperties blobProperties = blobCrl.getBlobProperties(blobName);
     Instant createTime = blobProperties.getCreationTime().toInstant();
+
+    String checksumMd5;
+    if (finalMd5.isUserProvided()) {
+      checksumMd5 = finalMd5.effectiveMd5();
+    } else {
+      // If the MD5 wasn't set in the cloud and it has been read from the source, explicitly set it
+      if (blobProperties.getContentMd5() == null && finalMd5.effectiveMd5() != null) {
+        blobCrl.setBlobMd5(blobName, finalMd5.effectiveMd5().getBytes(StandardCharsets.UTF_8));
+      }
+      checksumMd5 =
+          Optional.ofNullable(blobProperties.getContentMd5())
+              .map(Hex::encodeHexString)
+              .orElse(finalMd5.effectiveMd5());
+    }
     return new FSFileInfo()
-        .fileId(fileId)
+        .fileId(effectiveFileId)
         .createdDate(createTime.toString())
         .cloudPath(
             String.format(
                 "%s/%s",
                 targetClientFactory.getBlobContainerClient().getBlobContainerUrl(), blobName))
-        .checksumMd5(Base64.getEncoder().encodeToString((blobProperties.getContentMd5())))
+        .checksumMd5(checksumMd5)
+        .userSpecifiedMd5(finalMd5.isUserProvided())
         .size(blobProperties.getBlobSize())
         .bucketResourceId(storageAccountResource.getResourceId().toString());
+  }
+
+  private record SourceFileInfo(
+      String md5, long size, BlobContainerClientFactory sourceClientFactory, String sourceUrl) {}
+
+  private SourceFileInfo getSourceFileInfo(UUID tenantId, String sourcePath) {
+    if (GcsUriUtils.isGsUri(sourcePath)) {
+      String projectId = getProjectIdFromGsPath(sourcePath);
+      Storage storage = gcsProjectFactory.getStorage(projectId);
+      String sanitizedSourcePath =
+          UriUtils.omitQueryParameter(sourcePath, USER_PROJECT_QUERY_PARAM);
+      Blob sourceBlob = GcsPdao.getBlobFromGsPath(storage, sanitizedSourcePath, projectId);
+
+      return new SourceFileInfo(
+          sourceBlob.getMd5ToHexString(), sourceBlob.getSize(), null, sourcePath);
+    } else {
+      BlobContainerClientFactory sourceClientFactory =
+          buildSourceClientFactory(tenantId, sourcePath);
+      BlobUrlParts blobUrl = BlobUrlParts.parse(sourcePath);
+      BlobProperties sourceBlobProperties =
+          sourceClientFactory
+              .getBlobContainerClient()
+              .getBlobClient(blobUrl.getBlobName())
+              .getProperties();
+      String md5 =
+          Optional.ofNullable(sourceBlobProperties.getContentMd5())
+              .map(Hex::encodeHexString)
+              .orElse(null);
+      return new SourceFileInfo(
+          md5, sourceBlobProperties.getBlobSize(), sourceClientFactory, blobUrl.getBlobName());
+    }
   }
 
   /**
@@ -129,12 +262,44 @@ public class AzureBlobStorePdao implements CloudFileReader {
    */
   @SuppressFBWarnings("OS_OPEN_STREAM")
   @Override
-  public Stream<String> getBlobsLinesStream(String blobUrl, String tenantId) {
+  public Stream<String> getBlobsLinesStream(
+      String blobUrl, String tenantId, AuthenticatedUserRequest userRequest) {
     UUID tenantUuid = UUID.fromString(tenantId);
-    String signedBlobUrl = getOrSignUrlStringForSourceFactory(blobUrl, tenantUuid);
+    String signedBlobUrl = getOrSignUrlStringForSourceFactory(blobUrl, tenantUuid, userRequest);
     AzureBlobStoreBufferedReader azureBlobStoreBufferedReader =
         new AzureBlobStoreBufferedReader(signedBlobUrl);
     return azureBlobStoreBufferedReader.lines();
+  }
+
+  @Override
+  public void validateUserCanRead(
+      List<String> sourcePaths,
+      String cloudEncapsulationId,
+      AuthenticatedUserRequest user,
+      Dataset dataset) {
+    // This check is not needed for Azure source files because we use signed URLS that by default
+    // check those permissions.  But this is needed if ingesting from GCS-hosted files.
+    List<String> gsPaths = sourcePaths.stream().filter(GcsUriUtils::isGsUri).toList();
+
+    // Extract the project ids from the userProject query parameter.  There can be 0 or 1 values
+    List<String> cloudEncapsulationIds =
+        gsPaths.stream()
+            .map(p -> UriUtils.getValueFromQueryParameter(p, USER_PROJECT_QUERY_PARAM))
+            .filter(Objects::nonNull)
+            .distinct()
+            .toList();
+    if (cloudEncapsulationIds.size() > 1) {
+      throw new IllegalArgumentException("Only a single billing project per ingest may be used");
+    }
+
+    gcsPdao.validateUserCanRead(
+        gsPaths, cloudEncapsulationIds.stream().findFirst().orElse(null), user, dataset);
+  }
+
+  public void writeBlobLines(String signedPath, List<String> lines) {
+    try (Stream<String> stream = lines.stream()) {
+      writeBlobLines(signedPath, stream);
+    }
   }
 
   public void writeBlobLines(String signedPath, Stream<String> lines) {
@@ -175,18 +340,27 @@ public class AzureBlobStorePdao implements CloudFileReader {
   }
 
   public boolean deleteDataFileById(
-      String fileId, String fileName, AzureStorageAccountResource storageAccountResource) {
+      String fileId,
+      String fileName,
+      AzureStorageAccountResource storageAccountResource,
+      AuthenticatedUserRequest userRequest) {
     BillingProfileModel profileModel =
         profileDao.getBillingProfileById(storageAccountResource.getProfileId());
 
     BlobContainerClientFactory destinationClientFactory =
-        getTargetDataClientFactory(profileModel, storageAccountResource, ContainerType.DATA, true);
+        getTargetDataClientFactory(
+            profileModel,
+            storageAccountResource,
+            new BlobSasTokenOptions(
+                DEFAULT_SAS_TOKEN_EXPIRATION,
+                new BlobSasPermission().setReadPermission(true).setDeletePermission(true),
+                userRequest.getEmail()));
     String blobName = getBlobName(fileId, fileName);
     BlobCrl blobCrl = getBlobCrl(destinationClientFactory);
     return blobCrl.deleteBlob(blobName);
   }
 
-  public boolean deleteFile(FireStoreFile fireStoreFile) {
+  public boolean deleteFile(FireStoreFile fireStoreFile, AuthenticatedUserRequest userRequest) {
     AzureStorageAccountResource storageAccountResource =
         azureResourceDao.retrieveStorageAccountById(
             UUID.fromString(fireStoreFile.getBucketResourceId()));
@@ -194,7 +368,13 @@ public class AzureBlobStorePdao implements CloudFileReader {
     BillingProfileModel profileModel =
         profileDao.getBillingProfileById(storageAccountResource.getProfileId());
     BlobContainerClientFactory destinationClientFactory =
-        getTargetDataClientFactory(profileModel, storageAccountResource, ContainerType.DATA, true);
+        getTargetDataClientFactory(
+            profileModel,
+            storageAccountResource,
+            new BlobSasTokenOptions(
+                DEFAULT_SAS_TOKEN_EXPIRATION,
+                new BlobSasPermission().setReadPermission(true).setDeletePermission(true),
+                userRequest.getEmail()));
 
     BlobUrlParts blobParts = BlobUrlParts.parse(fireStoreFile.getGspath());
     if (!blobParts.getAccountName().equals(storageAccountResource.getName())) {
@@ -215,15 +395,68 @@ public class AzureBlobStorePdao implements CloudFileReader {
     return success;
   }
 
+  public boolean deleteScratchParquet(
+      String blobPath,
+      AzureStorageAccountResource storageAccountResource,
+      AuthenticatedUserRequest userRequest) {
+
+    String blobUrl =
+        String.format(
+            "%s/%s",
+            storageAccountResource.getStorageAccountUrl(), FolderType.SCRATCH.getPath(blobPath));
+    BlobUrlParts blobParts = BlobUrlParts.parse(blobUrl);
+
+    BillingProfileModel profileModel =
+        profileDao.getBillingProfileById(storageAccountResource.getProfileId());
+    BlobContainerClientFactory destinationClientFactory =
+        getTargetDataClientFactory(
+            profileModel,
+            storageAccountResource,
+            new BlobSasTokenOptions(
+                DEFAULT_SAS_TOKEN_EXPIRATION,
+                new BlobSasPermission()
+                    .setReadPermission(true)
+                    .setDeletePermission(true)
+                    .setListPermission(true),
+                userRequest.getEmail()));
+
+    String blobName = blobParts.getBlobName();
+    BlobCrl blobCrl = getBlobCrl(destinationClientFactory);
+
+    return blobCrl.deleteBlobsWithPrefix(blobName);
+  }
+
+  /**
+   * Given a signed Url, return all children of the path if it is a directory
+   *
+   * @return A list of signed URLs to the child blobs
+   */
+  public List<String> listChildren(String signedUrl) {
+    var blobName = BlobUrlParts.parse(signedUrl).getBlobName();
+    return getSourceClientFactory(signedUrl)
+        .getBlobContainerClient()
+        // List children of the parquet directory
+        .listBlobs(new ListBlobsOptions().setPrefix(blobName + "/"), Duration.ofMinutes(5))
+        .stream()
+        // Extract the name
+        .map(BlobItem::getName)
+        // Ignore the empty placeholder file
+        .filter(n -> !n.endsWith("/_"))
+        // Fully qualify the name by poor-man cloning the original URL and modifying the blob name
+        // Note: we can't use the BlobUrlParts URL builder since it encodes the blob name, which
+        // ends up being an invalid URL
+        .map(n -> BlobUrlParts.parse(signedUrl).setBlobName(n))
+        .map(AzureUriUtils::getUriFromBlobUrlParts)
+        .toList();
+  }
+
   public String signFile(
       BillingProfileModel profileModel,
       AzureStorageAccountResource storageAccountResource,
       String url,
-      ContainerType containerType,
-      Duration duration,
-      String userEmail) {
+      BlobSasTokenOptions blobSasTokenOptions) {
     BlobContainerClientFactory destinationClientFactory =
-        getTargetDataClientFactory(profileModel, storageAccountResource, containerType, true);
+        getTargetDataClientFactory(profileModel, storageAccountResource, blobSasTokenOptions);
 
     BlobUrlParts blobParts = BlobUrlParts.parse(url);
     if (!blobParts.getAccountName().equals(storageAccountResource.getName())) {
@@ -233,9 +466,6 @@ public class AzureBlobStorePdao implements CloudFileReader {
               blobParts.getAccountName(), storageAccountResource.getName()));
     }
     String blobName = blobParts.getBlobName();
-    BlobSasPermission permission = new BlobSasPermission().setReadPermission(true);
-    BlobSasTokenOptions blobSasTokenOptions =
-        new BlobSasTokenOptions(duration, permission, userEmail);
     return destinationClientFactory
         .getBlobSasUrlFactory()
         .createSasUrlForBlob(blobName, blobSasTokenOptions);
@@ -268,20 +498,22 @@ public class AzureBlobStorePdao implements CloudFileReader {
   public BlobContainerClientFactory getTargetDataClientFactory(
       BillingProfileModel profileModel,
       AzureStorageAccountResource storageAccountResource,
-      ContainerType containerType,
-      boolean enableDelete) {
+      BlobSasTokenOptions blobSasTokenOptions) {
+
     return new BlobContainerClientFactory(
         azureContainerPdao.getDestinationContainerSignedUrl(
-            profileModel, storageAccountResource, containerType, true, true, true, enableDelete),
+            profileModel, storageAccountResource, blobSasTokenOptions),
         getRetryOptions());
   }
 
-  public BlobUrlParts getOrSignUrlForSourceFactory(String dataSourceUrl, UUID tenantId) {
-    String signedURL = getOrSignUrlStringForSourceFactory(dataSourceUrl, tenantId);
+  public BlobUrlParts getOrSignUrlForSourceFactory(
+      String dataSourceUrl, UUID tenantId, AuthenticatedUserRequest userRequest) {
+    String signedURL = getOrSignUrlStringForSourceFactory(dataSourceUrl, tenantId, userRequest);
     return BlobUrlParts.parse(signedURL);
   }
 
-  public String getOrSignUrlStringForSourceFactory(String dataSourceUrl, UUID tenantId) {
+  public String getOrSignUrlStringForSourceFactory(
+      String dataSourceUrl, UUID tenantId, AuthenticatedUserRequest userRequest) {
     // parse user provided url to Azure container - can be signed or unsigned
     BlobUrlParts ingestControlFileBlobUrl = BlobUrlParts.parse(dataSourceUrl);
     String blobName = ingestControlFileBlobUrl.getBlobName();
@@ -298,7 +530,7 @@ public class AzureBlobStorePdao implements CloudFileReader {
         new BlobSasTokenOptions(
             DEFAULT_SAS_TOKEN_EXPIRATION,
             new BlobSasPermission().setReadPermission(true),
-            AzureBlobStorePdao.class.getName());
+            userRequest.getEmail());
     return sourceClientFactory.getBlobSasUrlFactory().createSasUrlForBlob(blobName, options);
   }
 
@@ -306,22 +538,19 @@ public class AzureBlobStorePdao implements CloudFileReader {
       String dataSourceUrl,
       BillingProfileModel profileModel,
       AzureStorageAccountResource storageAccount,
-      ContainerType containerType) {
+      AuthenticatedUserRequest userRequest) {
     return BlobUrlParts.parse(
         getOrSignUrlStringForTargetFactory(
-            dataSourceUrl, profileModel, storageAccount, containerType));
+            dataSourceUrl, profileModel, storageAccount, userRequest));
   }
 
   public String getOrSignUrlStringForTargetFactory(
       String dataSourceUrl,
       BillingProfileModel profileModel,
       AzureStorageAccountResource storageAccount,
-      ContainerType containerType) {
+      AuthenticatedUserRequest userRequest) {
     BlobUrlParts ingestControlFileBlobUrl = BlobUrlParts.parse(dataSourceUrl);
     String blobName = ingestControlFileBlobUrl.getBlobName();
-
-    BlobContainerClientFactory targetDataClientFactory =
-        getTargetDataClientFactory(profileModel, storageAccount, containerType, false);
 
     // Given the sas token, rebuild a signed url
     BlobSasTokenOptions options =
@@ -331,8 +560,14 @@ public class AzureBlobStorePdao implements CloudFileReader {
                 .setReadPermission(true)
                 .setListPermission(true)
                 .setWritePermission(true),
-            AzureBlobStorePdao.class.getName());
-    return targetDataClientFactory.getBlobSasUrlFactory().createSasUrlForBlob(blobName, options);
+            userRequest.getEmail());
+
+    BlobContainerClientFactory targetDataClientFactory =
+        getTargetDataClientFactory(profileModel, storageAccount, options);
+
+    return AzureUriUtils.getUriFromBlobUrlParts(
+        BlobUrlParts.parse(
+            targetDataClientFactory.getBlobSasUrlFactory().createSasUrlForBlob(blobName, options)));
   }
 
   @VisibleForTesting
@@ -362,6 +597,6 @@ public class AzureBlobStorePdao implements CloudFileReader {
   }
 
   private String getBlobName(String fileId, String fileName) {
-    return String.format("%s/%s", fileId, fileName);
+    return FolderType.DATA.getPath("%s/%s".formatted(fileId, fileName));
   }
 }
