@@ -1,27 +1,35 @@
 package bio.terra.service.filedata.google.firestore;
 
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.isA;
+import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 
+import bio.terra.common.EmbeddedDatabaseTest;
 import bio.terra.common.TestUtils;
 import bio.terra.common.category.Connected;
-import bio.terra.common.fixtures.StringListCompare;
 import bio.terra.model.ConfigFaultCountedModel;
 import bio.terra.model.ConfigFaultModel;
 import bio.terra.model.ConfigGroupModel;
 import bio.terra.model.ConfigModel;
 import bio.terra.service.configuration.ConfigEnum;
 import bio.terra.service.configuration.ConfigurationService;
+import bio.terra.service.filedata.exception.FileAlreadyExistsException;
+import bio.terra.service.filedata.exception.FileSystemCorruptException;
+import bio.terra.service.filedata.exception.FileSystemExecutionException;
 import com.google.cloud.firestore.Firestore;
 import io.grpc.StatusRuntimeException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -40,9 +48,9 @@ import org.springframework.test.context.junit4.SpringRunner;
 @AutoConfigureMockMvc
 @ActiveProfiles({"google", "connectedtest"})
 @Category(Connected.class)
+@EmbeddedDatabaseTest
 public class FireStoreFileDaoTest {
-  private final Logger logger =
-      LoggerFactory.getLogger("bio.terra.service.filedata.google.firestore.FireStoreFileDaoTest");
+  private final Logger logger = LoggerFactory.getLogger(FireStoreFileDaoTest.class);
   private final Long FILE_SIZE = 42L;
   private final Long CHANGED_FILE_SIZE = 22L;
 
@@ -54,11 +62,13 @@ public class FireStoreFileDaoTest {
 
   private String datasetId;
   private Firestore firestore;
+  private String collectionId;
 
   @Before
   public void setup() throws Exception {
     configurationService.reset();
     datasetId = UUID.randomUUID().toString();
+    collectionId = String.format("%s-files", datasetId);
     firestore = TestFirestoreProvider.getFirestore();
   }
 
@@ -70,54 +80,72 @@ public class FireStoreFileDaoTest {
   @Test
   public void createDeleteFileTest() throws Exception {
     FireStoreFile file1 = makeFile();
-    String objectId = file1.getFileId();
+    FireStoreFile file2 = makeFile();
+    String objectId1 = file1.getFileId();
 
-    FireStoreFile existCheck = fileDao.retrieveFileMetadata(firestore, datasetId, objectId);
+    FireStoreFile existCheck = fileDao.retrieveFileMetadata(firestore, datasetId, objectId1);
     assertNull("Object id does not exists", existCheck);
-    fileDao.createFileMetadata(firestore, datasetId, file1);
-    existCheck = fileDao.retrieveFileMetadata(firestore, datasetId, objectId);
+    fileDao.upsertFileMetadata(firestore, datasetId, file1);
+    existCheck = fileDao.retrieveFileMetadata(firestore, datasetId, objectId1);
     assertNotNull("Object id exists", existCheck);
     assertThat("Correct size", existCheck.getSize(), equalTo(FILE_SIZE));
 
     file1.size(CHANGED_FILE_SIZE);
-    fileDao.createFileMetadata(firestore, datasetId, file1);
-    existCheck = fileDao.retrieveFileMetadata(firestore, datasetId, objectId);
+    fileDao.upsertFileMetadata(firestore, datasetId, file1);
+    existCheck = fileDao.retrieveFileMetadata(firestore, datasetId, objectId1);
     assertNotNull("Object id exists", existCheck);
     assertThat("Correct size", existCheck.getSize(), equalTo(CHANGED_FILE_SIZE));
 
-    boolean fileExisted = fileDao.deleteFileMetadata(firestore, datasetId, objectId);
+    file2.checksumMd5("foo");
+    fileDao.upsertFileMetadata(firestore, datasetId, file2);
+    List<FireStoreFile> filesWithNullMd5Field =
+        fileDao.enumerateAllWithEmptyField(firestore, datasetId, "checksumMd5");
+    assertThat("only one file has no md5", filesWithNullMd5Field, hasSize(1));
+    assertThat(
+        "file1's id has a null md5", filesWithNullMd5Field.get(0).getFileId(), equalTo(objectId1));
+
+    boolean fileExisted = fileDao.deleteFileMetadata(firestore, datasetId, objectId1);
     assertTrue("File existed before delete", fileExisted);
-    existCheck = fileDao.retrieveFileMetadata(firestore, datasetId, objectId);
+    existCheck = fileDao.retrieveFileMetadata(firestore, datasetId, objectId1);
     assertNull("Object id does not exists", existCheck);
 
-    fileExisted = fileDao.deleteFileMetadata(firestore, datasetId, objectId);
+    fileExisted = fileDao.deleteFileMetadata(firestore, datasetId, objectId1);
     assertFalse("File doesn't exist after delete", fileExisted);
   }
 
   @Test
   public void deleteAllFilesTest() throws Exception {
     // Make some files
-    List<FireStoreFile> fileList = new ArrayList<>();
-    for (int i = 0; i < 5; i++) {
-      FireStoreFile fsf = makeFile();
-      fileDao.createFileMetadata(firestore, datasetId, fsf);
-      fileList.add(fsf);
-    }
+    List<FireStoreFile> fileList = IntStream.range(0, 5).boxed().map(i -> makeFile()).toList();
+    fileDao.upsertFileMetadata(firestore, datasetId, fileList);
 
-    List<String> fileIds =
-        fileList.stream().map(fsf -> fsf.getFileId()).collect(Collectors.toList());
+    List<String> fileIds = fileList.stream().map(FireStoreFile::getFileId).toList();
+
+    for (String fileId : fileIds) {
+      FireStoreFile existCheck = fileDao.retrieveFileMetadata(firestore, datasetId, fileId);
+      assertNotNull("File entry was created", existCheck);
+    }
 
     List<String> deleteIds = new ArrayList<>();
 
     // Delete the files; our function collects the deleted object ids in a list
-    fileDao.deleteFilesFromDataset(firestore, datasetId, fsf -> deleteIds.add(fsf.getFileId()));
+    fileDao.deleteFilesFromDataset(
+        firestore,
+        datasetId,
+        fsf -> {
+          synchronized ((deleteIds)) {
+            deleteIds.add(fsf.getFileId());
+          }
+        });
 
-    StringListCompare listCompare = new StringListCompare(fileIds, deleteIds);
-    assertTrue("Deleted id list matched created id list", listCompare.compare());
+    assertThat(
+        "Deleted id list matched created id list",
+        deleteIds,
+        containsInAnyOrder(fileIds.toArray(new String[0])));
 
     for (String fileId : fileIds) {
       FireStoreFile existCheck = fileDao.retrieveFileMetadata(firestore, datasetId, fileId);
-      assertNull("File is deleted", existCheck);
+      assertNull("File entry was deleted", existCheck);
     }
   }
 
@@ -132,7 +160,7 @@ public class FireStoreFileDaoTest {
     FireStoreFile file1 = makeFile();
     String objectId = file1.getFileId();
 
-    fileDao.createFileMetadata(firestore, datasetId, file1);
+    fileDao.upsertFileMetadata(firestore, datasetId, file1);
     fileDao.retrieveFileMetadata(firestore, datasetId, objectId);
   }
 
@@ -164,12 +192,65 @@ public class FireStoreFileDaoTest {
     FireStoreFile file1 = makeFile();
     String objectId = file1.getFileId();
 
-    fileDao.createFileMetadata(firestore, datasetId, file1);
+    fileDao.upsertFileMetadata(firestore, datasetId, file1);
     fileDao.retrieveFileMetadata(firestore, datasetId, objectId);
+  }
+
+  @Test
+  public void createFileWithConflictingLoadTagsTest() throws Exception {
+    FireStoreFile file1 = makeFile();
+    String objectId1 = file1.getFileId();
+
+    FireStoreFile existCheck = fileDao.retrieveFileMetadata(firestore, datasetId, objectId1);
+    assertNull("Object id does not exists", existCheck);
+    fileDao.upsertFileMetadata(firestore, datasetId, file1.loadTag("lt1"));
+    Throwable cause =
+        assertThrows(
+                "upsert fails with load tag conflict (and try the list uploader)",
+                FileSystemExecutionException.class,
+                () ->
+                    fileDao.upsertFileMetadata(firestore, datasetId, List.of(file1.loadTag("lt2"))))
+            .getCause();
+    assertThat(
+        "Correct cause triggered the error",
+        cause.getCause(),
+        isA(FileAlreadyExistsException.class));
+  }
+
+  @Test
+  public void testBatchRetrieveFileMetadata() throws InterruptedException {
+    List<FireStoreDirectoryEntry> directoryEntries =
+        IntStream.range(0, 5)
+            .mapToObj(i -> new FireStoreDirectoryEntry().fileId(UUID.randomUUID().toString()))
+            .toList();
+    List<FireStoreFile> files =
+        directoryEntries.stream()
+            .map(FireStoreDirectoryEntry::getFileId)
+            .map(this::makeFile)
+            .toList();
+    for (FireStoreFile file : files) {
+      fileDao.upsertFileMetadata(firestore, datasetId, file);
+    }
+    List<FireStoreFile> retrievedFiles =
+        fileDao.batchRetrieveFileMetadata(firestore, datasetId, directoryEntries);
+    assertEquals(files, retrievedFiles);
+  }
+
+  @Test
+  public void testBatchRetrieveNonExistentFileMetadata() {
+    FireStoreDirectoryEntry directoryEntry =
+        new FireStoreDirectoryEntry().fileId(UUID.randomUUID().toString());
+    assertThrows(
+        FileSystemCorruptException.class,
+        () -> fileDao.batchRetrieveFileMetadata(firestore, datasetId, List.of(directoryEntry)));
   }
 
   private FireStoreFile makeFile() {
     String fileId = UUID.randomUUID().toString();
+    return makeFile(fileId);
+  }
+
+  private FireStoreFile makeFile(String fileId) {
     return new FireStoreFile()
         .fileId(fileId)
         .mimeType("application/test")
